🐛 Fix btn-close
The btn-close class seemed to be inverted, in light mode the X is white
which is hard to see and in dark mode the X is dark grey which is also
hard to see.  This commit will invert it and make it work for both
modes.

--- a/app/assets/stylesheets/arclight.scss
+++ b/app/assets/stylesheets/arclight.scss
@@ -381,6 +381,14 @@ html[data-bs-theme=dark] {
   .al-masthead.bg-light, .navbar-search.bg-light {
     background-color: #282B2F !important;
   }
+
+  .btn-close {
+    --bs-btn-close-filter: invert(1) grayscale(100%) brightness(200%);
+  }
+}
+
+.btn-close {
+  --bs-btn-close-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'><path d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414'/></svg>")
 }
 
 // Styles for the large card image zoom feature
